# guignote-frontend-desktop

./: LICENSE  README.md
guignote/: CMakeLists.txt  Doxyfile  botonaccion.cpp  botonaccion.h  carta.cpp  carta.h  cartas_base.qrc  cartas_paint.qrc  cartas_poker.qrc  chatmanager.cpp  chatmanager.h  clickableImage.h  clickableimage.cpp  clickableimage.h  crearcustomgame.cpp  crearcustomgame.h  customgameswindow.cpp  customgameswindow.h  deck.cpp  deck.h  estadopartida.cpp  estadopartida.h  friendsmessagewindow.cpp  friendsmessagewindow.h  friendswindow.cpp  friendswindow.h  gamemessagewindow.cpp  gamemessagewindow.h  gamewindow.cpp  gamewindow.h  hovericon.cpp  hovericon.h  icon.cpp  icon.h  icons.qrc  imagebutton.cpp  imagebutton.h  inventorywindow.cpp  inventorywindow.h  loadingwindow.cpp  (+40 more)
guignote/docs/html/: CMakeCXXCompilerId_8cpp.html  annotated.html  carta_8cpp.html  carta_8cpp__incl.map  carta_8cpp__incl.md5  carta_8h.html  carta_8h__dep__incl.map  carta_8h__dep__incl.md5  carta_8h__incl.map  carta_8h__incl.md5  carta_8h_source.html  classCardTile-members.html  classCardTile.html  classCardTile__inherit__graph.map  classCardTile__inherit__graph.md5  classCarta-members.html  classCarta.html  classCarta__coll__graph.map  classCarta__coll__graph.md5  classDeck-members.html  classDeck.html  classDeck__inherit__graph.map  classDeck__inherit__graph.md5  classDummyMenuWindow-members.html  classDummyMenuWindow.html  classDummyMenuWindow__coll__graph.map  classDummyMenuWindow__inherit__graph.md5  classFriendsMessageWindow-members.html  classFriendsMessageWindow.html  classFriendsMessageWindow__coll__graph.md5  classFriendsMessageWindow__inherit__graph.map  classGameMessageWindow-members.html  classGameMessageWindow.html  classGameMessageWindow__inherit__graph.map  classGameMessageWindow__inherit__graph.md5  classGameWindow-members.html  classGameWindow.html  classGameWindow__coll__graph.md5  classGameWindow__inherit__graph.map  classIcon-members.html  (+704 more)
guignote/docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_c.js  classes_d.js  defines_6.js  defines_7.js  defines_8.js  files_0.js  files_2.js  files_3.js  files_4.js  files_5.js  (+30 more)
guignote/tests/: main_tests.cpp  test_friendswindow.cpp  test_friendswindow.h  test_inventorywindow.cpp  test_inventorywindow.h  test_loginwindow.cpp  test_loginwindow.h  test_mainwindow.cpp  test_mainwindow.h  test_menuwindow.cpp  test_menuwindow.h  test_myprofilewindow.cpp  test_myprofilewindow.h  test_rankingwindow.cpp  test_rankingwindow.h  test_registerwindow.cpp  test_registerwindow.h  test_settingswindow.cpp  test_settingswindow.h  test_userprofilewindow.cpp  test_userprofilewindow.h
